# Orchestrator-Agent

./: .env.free  .env.local  .env.paid  .env.stub  .gitignore  Dockerfile  README.md  docker-compose.yml  hsy.txt  pyproject.toml  requirements.txt
.github/workflows/: deploy-azure.yml  python-app-run.yml  python-app.yml
app/: config.py  executor.py  main.py  models.py  planner.py  session_store.py
app.egg-info/: SOURCES.txt
app/routes/: agents.py  analyze.py  datasets.py  plan.py  stream.py
app/utils/: storage.py
stubs/: demo_client.py  mock_agent.py  run_stubs.py  scenario_test.py
tests/: test_config.py  test_executor.py  test_models.py  test_planner.py  test_routes.py  test_session_store.py
uploads/: 47b6e1ae_sales.csv  datasets.json
